# VLA-driven-manipulation

./: .gitignore  README.md  agents.md  hypothesis.md  instructions.md  pyproject.toml
SimpleVLA-RL/: README.md
SimpleVLA-RL/examples/: run_openvla_oft_rl_libero.sh  run_openvla_oft_rl_libero_binary.sh  run_openvla_oft_rl_libero_clipped_dense.sh  run_openvla_oft_rl_libero_dense.sh  run_openvla_oft_rl_libero_tau_sweep.sh
SimpleVLA-RL/verl/trainer/: main_ppo.py
SimpleVLA-RL/verl/trainer/config/: ppo_trainer.yaml
SimpleVLA-RL/verl/trainer/ppo/: core_algos.py  ray_trainer.py  rob_reward.py
SimpleVLA-RL/verl/workers/actor/: dp_rob.py
SimpleVLA-RL/verl/workers/rollout/: rob_rollout.py
results/: EXPERIMENTS.md
src/: __init__.py
src/algorithms/: __init__.py  grpo_clipped_dense.py  grpo_dense.py  grpo_sparse.py  grpo_trainer.py  reward_shaping.py
src/analysis/: __init__.py  logging.py  metrics.py  phase1_report.py  plot_results.py  statistics.py
src/config/: __init__.py  defaults.py  io.py  types.py
src/envs/classic/: __init__.py  factory.py  specs.py
src/experiments/: __init__.py  check_phase1_setup.py  phase1_classic.py  run_experiment.py
src/experiments/configs/: cartpole_dense.yaml  phase1a.yaml  phase1a_smoke.yaml  phase1a_tau_sweep.yaml  phase1b.yaml
src/models/: __init__.py  policies.py
src/vla_driven_manipulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classic_rewards.py  test_config_io.py  test_reward_shaping.py  test_simplevla_reward_pipeline.py  test_smoke_training.py  test_statistics.py
